--- a/style.css
+++ b/style.css
@@ -9,110 +9,125 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* header */
+/* HEADER */
 
 header{
-  background-color: white;
-  padding: 20px 10px;
-  margin-bottom: 30px;
+  background-color: #ffffff;
+  padding: 10px 20px;
+  margin-bottom: 25px;
 }
 
-.logo-title {
-  display: inline;
-}
-
-.logo, .logo-title {
+#logo{
   vertical-align: middle;
 }
 
-.logo-title{
-  font-size: 40px;
+#title{
+  vertical-align: middle;
+  font-size: 30px;
+  font-weight: 700;
 }
 
-/* Main */
+/* MAIN */
 
-.main{
-  background-color: white;
-  margin: auto;
-  width: 70%;
-  padding: 10px 50px;
-  border-bottom: 3px solid #f6f8f9
-}
-
-button{
-  border-radius: 5px;
-  padding: 5px 10px;
-  font-size: 10px;
-}
-
-button.button1{
-  color: #ffffff;
-  background-color: #47adf1;
-}
-
-button.button2{
-  color: #d6dade;
+.container{
   background-color: #ffffff;
+  width: 80%;
+  margin: auto;
+  padding: 10px 30px;
+  border-bottom: 2px solid #f6f8f9;
 }
 
-.main.section{
-  height: 600px;
+.btn{
+  border: none;
+  padding: 3px 5px;
+  font-size: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn.task{
+  background-color: #48adf1;
+  color: #ffffff;
+  border: 1px solid #48adf1;
+}
+
+.btn.section{
+  background-color: #ffffff;
+  color: #d9dde0;
+  border: 1px solid #d9dde0;
+}
+
+.todo{
+  background-color: #ffffff;
+  width: 80%;
+  margin: auto;
   padding: 30px 50px;
 }
 
-h3{
-  padding-top: 10px;
+/* LIST */
+
+ul{
+  list-style: none;
 }
 
-h3::before{
+ul h4::before{
   content: '\25BE';
 }
 
-.thingstodo.yes::before{
-  content: '\2713   ';
+ul li{
+  padding: 7px 0;
+}
+
+h4{
+  margin-top: 10px;
+}
+
+li.list::before{
+  border-radius: 50%;
+  padding: 2px;
+  margin: 5px;
+}
+
+li.list.yes::before{
+  content: '\2713';
   color: green;
-  border: 2px solid green;
-  border-radius: 50%;
+  border: 1px solid green;
 }
 
-.thingstodo.nope::before{
-  content: '\2715   ';
+li.list.no::before{
+  content: '\2715';
   color: red;
-  border: 2px solid red;
-  border-radius: 50%;
+  border: 1px solid red;
 }
 
-.thingstodo{
-  margin: 15px 0;
+.highlight{
+  color: white;
+  border-radius: 8px;
+  padding: 5px 7px;
+  font-size: 8px;
+  vertical-align: middle;
 }
 
-.colored{
-  padding: 5px;
-  border-radius: 10px;
-  color: #ffffff;
-  font-size: 10px;
-}
-
-.colored.blue{
+.highlight.editorial{
   background-color: #45abea;
 }
 
-.colored.purple{
+.highlight.q1{
   background-color: #9c72e4;
 }
 
-.colored.green{
+.highlight.recruiting{
   background-color: #64c0a9;
 }
 
-.colored.orange{
-  background-color: #f29c2f;
+.highlight.mobile{
+  background-color: #f29e33;
 }
 
-.colored.ocra{
+.highlight.website{
+  background-color: #d75e9e;
+}
+
+.highlight.sales{
   background-color: #b0c926;
-}
-
-.colored.pink{
-  background-color: #d862a1;
 }
